--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,23 @@
+body{
+	background: #6182b7;
+}
+
 .the-table{
 	background-color: #277714;
-	border: 5px solid #277714;
+	border: 5px solid #663300;
 	border-radius: 10px;
 	margin-top: 50px;
-	padding: 30px;
+	padding: 130px 0px; /*changed padding from 30 to 130*/
 }
+
 .card{
 	height: 120px;
 	background-color: #fff;
 	padding: 10px;
-	border: solid black;
+	border: 2px solid #277714;
+}
+
+.card img{
+	max-height: 100%;
+	width: 100%;
 }
