--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1,6 +1,5 @@
 body{
-	/*background-color: #D8182F;*/
-	background-color: #2f3131;
+	background: url('https://www.flickeringmyth.com//wp-content/uploads/2014/05/casino_royale2-600x398.jpg');
 }
 
 .the-table{
