--- a/css/styles2.css
+++ b/css/styles2.css
@@ -4,7 +4,7 @@ body{
 }
 
 .the-table{
-	background: url('http://ksassets.timeincuk.net/wp/uploads/sites/55/2017/02/Daniel-Craig-920x584.png');
+	background: url('https://ae01.alicdn.com/kf/HTB1M5knKFXXXXXwXXXXq6xXFXXXb/220095343/HTB1M5knKFXXXXXwXXXXq6xXFXXXb.jpg');
 	background-repeat: no-repeat;
 	background-size: cover;
 	border: 20px solid #747B85;  /*CFCA76*/
