--- a/css/styles2.css
+++ b/css/styles2.css
@@ -14,6 +14,8 @@ body{
 	border-radius: 10px;
 	margin-top: 50px;
 	padding: 30px 0px;
+	transform: perspective(800px) rotateX(10deg);
+    right: 50px;
 }
 
 .card{
